--- a/src/public/index.html
+++ b/src/public/index.html
@@ -5,6 +5,9 @@
 		<title>Crossover Fanfiction Sim</title>
 
 		<link rel="stylesheet" href="global.css" />
+		<style type="text/css" media="all">
+		    @import url("select2/select2.css");
+		</style>
 
 		<script src="js/crossover.vendor.js">
 		</script>
